<resources>
    <string name="app_name">Tribune</string>
    <string name="tribune_name">Tribune</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="register">Register</string>
    <string name="already_have_account"><u>Already have account?</u></string>
    <string name="don_t_have_account"><u>Don\'t have account?</u></string>
    <string name="login">Log in</string>
    <string name="registration">Registration</string>
    <string name="load_more">Load more</string>
    <string name="settings">Settings</string>
    <string name="my_posts">My posts</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="text_of_post">Text of post</string>
    <string name="zero">0</string>
    <string name="enter_your_post_content">Enter your post content</string>
    <string name="add_photo_from_gallery">Add photo from Gallery</string>
    <string name="enter_link">Enter link</string>
    <string name="create_post">Create post</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="connection_to_server_failed">Connection to server failed</string>
    <string name="try_else">Try else</string>
    <string name="empty_password_login">Empty password or login</string>
    <string name="authorization_successful">Authorization is successful</string>
    <string name="authorization_failed">Authtorization failed</string>
    <string name="connect_to_server_failed">Connection to server failed</string>
    <string name="passwords_not_equal">Passwords are not equal</string>
    <string name="registration_successful">Registration is successful</string>
    <string name="registration_failed">Registration failed</string>
    <string name="like_is_performing">Loke is performing</string>
    <string name="dislike_is_performing">Dislike is performing</string>
    <string name="loading_posts_failed">Loading posts failed</string>
    <string name="google_play_unavailable">Google Play unavailable</string>
    <string name="vote_only_once">You can vote only once!</string>
    <string name="me">ME</string>
    <string name="empty_text">Empty text</string>
    <string name="photo_upload_is_successful">Photo upload is successful</string>
    <string name="photo_upload_failed">Photo upload failed</string>
    <string name="dont_add_photo">Don\'t add photo</string>
    <string name="create_post_is_successful">Create post is successful</string>
    <string name="create_post_failed">Create post failed</string>
    <string name="load_user_failed">Load user failed</string>
    <string name="attach_image__to_user_failed">Attach Image to user failed</string>
    <string name="empty_password">Empty password</string>
    <string name="change_password_successful">Change password successful</string>
    <string name="change_password_failed">Change password failed</string>
    <string name="notify">Notify</string>
    <string name="description_text">Description text</string>
    <string name="push_token_on_server_failed">Push token on server failed</string>
</resources>
