<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_5dp"
    android:padding="@dimen/post_padding">

    <ImageView
        android:id="@+id/imageViewLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewUser"
        tools:srcCompat="@drawable/ic_thumb_up_black" />

    <ImageView
        android:id="@+id/imageViewUser"
        android:layout_width="@dimen/size_48dp"
        android:layout_height="@dimen/size_48dp"
        android:layout_marginStart="@dimen/margin_15dp"
        app:layout_constraintStart_toEndOf="@+id/imageViewLike"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_baseline_face" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5dp"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewUser"
        app:layout_constraintTop_toTopOf="@+id/imageViewUser"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:textSize="@dimen/text_size_10sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewUser"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserName"
        tools:text="@string/status" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/snippet_size"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewUser"
        tools:text="@string/date" />

</androidx.constraintlayout.widget.ConstraintLayout>