<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar_create_post"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="@dimen/elevation"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/ic_public_black_24dp" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/editTextEnterContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_margin="@dimen/margin_15dp"
        android:gravity="top"
        android:hint="@string/enter_your_post_content"
        android:maxLength="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar_create_post" />

    <Switch
        android:id="@+id/switchAddPhotoFromGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15dp"
        android:text="@string/add_photo_from_gallery"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterContent" />

    <ImageView
        android:id="@+id/imageViewAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchAddPhotoFromGallery"
        app:srcCompat="@drawable/ic_add_a_photo_black_48dp" />

    <EditText
        android:id="@+id/editTextEnterLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15dp"
        android:hint="@string/enter_link"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAddImage" />

    <Button
        android:id="@+id/buttonCreatePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button"
        android:text="@string/create_post"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterLink" />


</androidx.constraintlayout.widget.ConstraintLayout>